<resources>
    <string name="app_name">RSV Study App</string>
    <string name="btnSync">Sync</string>
    <string name="btnUpload">Upload</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="talukaname"> تعلقي جو نالو</string>
    <string name="ucname">يونين ڪائونسل جو نالو</string>
    <string name="lhwname"> ليڊي هيلٿ ورڪر جو نالو</string>
    <string name="villagename"> ڳوٺ جو نالو </string>
    <string name="lhwcode"> ليڊي هيلٿ ورڪر جو کوڈ </string>
    <string name="household">گھر جو نمبر </string>
    <string name="householdhint">XXX-X</string>
    <string name="location">Location</string>
    <string name="urban">Urban</string>
    <string name="rural">Rural</string>
    <string name="mixed">Mixed</string>
    <string name="block">Block/ Muhalla</string>
    <string name="street">Street</string>
    <string name="cluster"> کلسٹر نمبر </string>
    <string name="Section1"> ایڈریس اور شناخت کی معلومات </string>
    <string name="studyId"> (study ID) مطالعہ کی شناخت اعداد </string>
    <string name="RSID"> شُرکا کا شناختی نمبر # </string>
    <string name="RS7">1.11: ماں کا موجودہ شناختی آئی ڈی </string>
    <string name="RS8">1.12: ماں کا مستقل شناختی آئی ڈی </string>
    <string name="num78"> شناختی نمبر </string>
    <string name="RS9">1.13 بچے کا نام </string>
    <string name="RS10">1.14 ماں کا نام </string>
    <string name="RS11">1.15 والد کا نام </string>
    <string name="RS12">1.16 گھر کے سربراہ کا نام </string>
    <string name="RS13"> بچے کی تاریخِ پیدایش </string>
    <string name="RS14"> بچے کی عمر (مہینے) </string>
    <string name="RS15"> وِزِٹ کی تاریخ </string>
    <string name="Section2"> رضاکارانہ طور پر دیکھ بھال کرنے والا </string>
    <string name="RS17">2.01: ماں یا دیکھ بھال کرنے والے نے مطالعے میں حصہ لینے کے بارے میں مطمئن رضامندی دی ہے </string>
    <string name="RS18">2.02: رضامندی فراہم نہ کرنے کی وجہ؟ </string>
    <string name="RS18a"> دلچسپی نہیں ہے </string>
    <string name="RS18b"> مصروفیت </string>
    <string name="RS18c"> مطالعہ کے طریقہ کار سے مطمئن نہیں </string>
    <string name="RS18d"> کسی بھی وجہ کا ذکر کرنے سے انکار </string>
    <string name="RS18e"> گھر میں کوئی بھی موجود نہیں </string>
    <string name="RS18f"> بچے کی نشاندہی نہیں ہوئی </string>
    <string name="RS19">2.03: (رضامندی ملنے کی صورت میں) دیکھ بھال کرنے والا / جواب دینے والا شخص کون ہے؟ </string>
    <string name="RS19a"> ماں </string>
    <string name="RS19b"> دادی </string>
    <string name="RS19c"> آنٹی </string>
    <string name="RS19d"> بہن </string>
    <string name="RS19e"> والد </string>
    <string name="RS19f"> دادا </string>
    <string name="RS19g"> انکل </string>
    <string name="RS19h"> بھائی </string>
    <string name="RS1996"> دیگر </string>
    <string name="RS20">2.04: ماں کیوں جواب دہ نہیں تھی؟ </string>
    <string name="RS20a">  وہ حیات نہیں ہیں </string>
    <string name="RS20b"> وہ دوسرے شہر منتقل ہوگئی ہے </string>
    <string name="RS20c"> وہ اس قابل نہیں ہے </string>
    <string name="RS20d"> مسلسل غیر حاظر ہے </string>
    <string name="RS20e"> وہ گھر پر موجود نہیں ہے </string>
    <string name="RS2096"> دیگر </string>
    <string name="RS21">2.05: کیا بچہ زندہ ہے </string>
    <string name="RS21a">  ہاں، اب بھی زندہ ہے </string>
    <string name="RS21b">  نہیں، بچہ مر چکا ہے </string>
    <string name="RS22">2.06: بچے کی تاریخ وفات کیا ہے؟ </string>
    <string name="Section3"> گھریلو معلومات </string>
    <string name="RS24">3.01: کتنے عرصے سے آپ اس گھر میں رہ رہے ہیں؟ </string>
    <string name="RS25">3.02: گھر میں کتنے افراد ہیں؟ </string>
    <string name="RS26">3.03: گھر میں سونے کے لیے کتنے کمرے ہیں؟ </string>
    <string name="RS27">3.04: گھر کی چھت کو دیکھیں اور نوٹ کریں کہ چھت کا بنیادی مواد کیا ہے؟ </string>
    <string name="RS27h1"> قدرتی چھت سازی </string>
    <string name="RS271"> چھت نہیں ہے </string>
    <string name="RS272"> اسچ چھت / کھجور کے درخت کے پتے/ ریڈ /  گھاس </string>
    <string name="RS273"> مٹی </string>
    <string name="RS274"> سوڈ / مٹی اور گھاس کا مرکب </string>
    <string name="RS275"> پی لکڑی </string>
    <string name="RS27h2"> بنیادی چھت سازی </string>
    <string name="RS276"> رسٹک چٹائی </string>
    <string name="RS277"> بانس </string>
    <string name="RS278"> خام لکڑی کا تختہ / لکڑی / گتے </string>
    <string name="RS279"> شیٹنگ / پلاسٹک Polyethylene  </string>
    <string name="RS2710"> اینٹیں / Unburnt  </string>
    <string name="RS2711"> جمع کئے گئے پتھر </string>
    <string name="RS27h3"> مکمل تیار شدہ چھت </string>
    <string name="RS2712"> میٹل / جی آئی یا آئرن شیٹ / ٹِن  </string>
    <string name="RS2713"> تیار شدہ لکڑی </string>
    <string name="RS2714"> کیلامین / سیمنٹ فائبر </string>
    <string name="RS2715"> اسبسٹوس شیٹ </string>
    <string name="RS2716"> مضبوط اینٹ  سیمنٹ / آرسیسی / کنکریٹ </string>
    <string name="RS2717"> روف شنگلز </string>
    <string name="RS2718"> ٹائلیں </string>
    <string name="RS2719"> سلیٹ </string>
    <string name="RS2720"> برنٹ برک </string>
    <string name="RS27x"> دیگر (وضاحت کریں) </string>
    <string name="RS28">3.05: گھر کے فرش کو دیکھیں اور نوٹ کریں کہ فرش کا بنیادی مواد کیا ہے؟ </string>
    <string name="RS28h1"> قدرتی فرش </string>
    <string name="RS281"> گیلی مٹی / مٹی / زمین / ریت </string>
    <string name="RS282"> ڈنگ </string>
    <string name="RS283"> ابتدائی خام لکڑی کا تختہ </string>
    <string name="RS284"> پام / بانس </string>
    <string name="RS285"> سیمنٹ / چونے کے بغیر اینٹ </string>
    <string name="RS286"> سیمنٹ / چونے کے بغیر پتھر </string>
    <string name="RS28h2"> مکمل تیار شدہ فرش </string>
    <string name="RS287"> لکڑی / پالش لکڑی </string>
    <string name="RS288"> ونایل / اسفالٹ  </string>
    <string name="RS289"> سیرامک ٹائلز  </string>
    <string name="RS2810"> سیمنٹ </string>
    <string name="RS2811"> چپس / ٹریرازو / موزیک </string>
    <string name="RS2812"> قالین / چٹائی </string>
    <string name="RS2813"> پالش پتھر / ماربل / گرینٹ </string>
    <string name="RS28x"> دیگر (وضاحت کریں) </string>
    <string name="RS29">3.06: گھر کے باہر کی دیواروں کو دیکھیں اور نوٹ کریں کہ دیواروں کا بنیادی مواد کیا ہے؟ </string>
    <string name="RS29h1"> قدرتی دیوار </string>
    <string name="RS291"> دیوار نہیں ہے </string>
    <string name="RS292"> کین / پام / ٹرنک / بانس </string>
    <string name="RS293"> گندگی /  گیلی مٹی </string>
    <string name="RS294"> پتھر </string>
    <string name="RS295"> گھاس / ریڈ / تھیچ / لکڑیاں </string>
    <string name="RS29h2"> ابتدائی دیوار </string>
    <string name="RS296">بانس کے ساتھ مٹی   </string>
    <string name="RS297"> پتھر کے ساتھ مٹی </string>
    <string name="RS298"> پلائیووڈ </string>
    <string name="RS299"> گتے / پلاسٹک </string>
    <string name="RS2910"> سورج بوم اینٹیں </string>
    <string name="RS2911"> خام لکڑی / استعمال شدہ لکڑی </string>
    <string name="RS29h3"> مکمل تیار شدہ دیوار </string>
    <string name="RS2912"> سیمنٹ / کُنکریٹ </string>
    <string name="RS2913"> چونے کے ساتھ پتھر / سیمنٹ </string>
    <string name="RS2914"> چونے کے ساتھ اینٹیں / سیمنٹ </string>
    <string name="RS2915"> مکمل لکڑی کے تختے / شنگلز </string>
    <string name="RS2916"> سیمنٹ بلاکس </string>
    <string name="RS2917"> میٹل / جی آئی یا آئرن شیٹ / ٹن / اسبسٹسوس شیٹ </string>
    <string name="RS29x"> دیگر وضاحت کریں </string>
    <string name="RS30">3.07: گھر کے افراد کے لئے پینے کے پانی کا بنیادی ذریعہ کیا ہے؟ </string>
    <string name="RS301"> پائپ </string>
    <string name="RS302"> ٹیوب / دستی پمپ  </string>
    <string name="RS303"> سپرنگ یا کنویں کا پانی   </string>
    <string name="RS304"> بارش کا پانی  </string>
    <string name="RS305"> واٹر ٹینکر / ٹوکری </string>
    <string name="RS306"> سطح </string>
    <string name="RS307"> بوتل </string>
    <string name="RS30x"> دیگر وضاحت کریں </string>
    <string name="RS31">3.08: عام طور پر خاندان کے افراد کس قسم کے ٹوائلٹ سہولت کا استعمال کرتے ہیں؟ </string>
    <string name="RS31h1"> فلش ٹوائلٹ </string>
    <string name="RS311"> پائپ شدہ سیور کا نظام میں فلش </string>
    <string name="RS312"> سیپٹک ٹینک میں فلش </string>
    <string name="RS313"> گھڑا ٹوائلٹ میں فلش </string>
    <string name="RS314"> کہیں اور فلش کرنا </string>
    <string name="RS315"> فلش، پتہ نہیں کہاں </string>
    <string name="RS31h2"> گڑھا ٹوائلٹ  </string>
    <string name="RS316"> ہوا دار بہتر گھڑا / بایوگیس ٹوائلٹ  </string>
    <string name="RS317"> سلیب کے ساتھ گھڑا ٹوائلٹ </string>
    <string name="RS318">  سلیب کے بغیر گھڑا ٹوائلٹ </string>
    <string name="RS319"> ٹوئن گڑھا / کمپوسٹنگ ٹوائلٹ </string>
    <string name="RS3110"> خشک ٹوائلٹ </string>
    <string name="RS3111"> بالٹی ٹوائلٹ </string>
    <string name="RS3112">  لٹکتا ہوا ٹوائلٹ </string>
    <string name="RS3113"> کوئی سہولت نہیں/جھاڑی/ کھلی جگہ یا میدان </string>
    <string name="RS31x"> دیگر وضاحت کریں </string>
    <string name="RS32">3.09: کیا گھر میں یہ موجود ہے </string>
    <string name="RS321"> بجلی </string>
    <string name="RS322"> الیکٹرک پنکھا </string>
    <string name="RS323"> واٹر پمپ </string>
    <string name="RS324"> سی ڈی / ڈی وی ڈی پلیئر </string>
    <string name="RS325"> بلیک اینٹ وائٹ ٹیلی ویژن </string>
    <string name="RS326"> رنگین ٹیلی ویژن </string>
    <string name="RS327"> ریفریجریٹر </string>
    <string name="RS328"> ریڈیو </string>
    <string name="RS329"> موبائل فون </string>
    <string name="RS3210"> تار والا فون </string>
    <string name="RS3211"> کمپیوٹر </string>
    <string name="RS3212"> واشنگ مشین </string>
    <string name="RS3213"> کیمرے </string>
    <string name="RS3214"> گھڑی / گھڑیال </string>
    <string name="RS3215"> پریشر ککر </string>
    <string name="RS3216"> سلائی مشین </string>
    <string name="RS3217"> تھریشر </string>
    <string name="RS3218"> ایئر کنڈشنر / روم کولر </string>
    <string name="RS3219"> جانوروں سے چلنے والی گاڑی </string>
    <string name="RS3220"> بائیسایکل </string>
    <string name="RS3221"> ٹریکٹر / موٹر والی کشتی </string>
    <string name="RS3222"> گاڑی / ٹرک </string>
    <string name="RS3223"> موٹر سائیکل / سکوٹر </string>
    <string name="RS3224"> رِکشا / وین </string>
    <string name="RS3225"> کرسی </string>
    <string name="RS3226"> بستر </string>
    <string name="RS3227"> گدا </string>
    <string name="RS3228"> سوفا </string>
    <string name="RS3229"> ٹیبل </string>
    <string name="RS3230"> الماری یا دراز </string>
    <string name="RS33">3.10: پوچھیں، دیکھیں اور نوٹ کریں کہ گھر میں کونسے جانور ہیں؟ </string>
    <string name="RS331"> بکری، گائے،بھینس </string>
    <string name="end_interview"> اختتام </string>
    <string name="nextSection"> اگلا حصہ </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="specify"> وضاحت کریں </string>
    <string name="pofpa15"> ٻار اسپتال ۾ ڪهڙو علاج حاصل ڪيو ؟ </string>
    <string name="pofpa151a"> دوا جو نالو </string>
    <string name="pofpa151b"> ڪيترا دفعا ڏينهن ۾ </string>
    <string name="pofpa151c"> وزن: </string>
    <string name="pofpa151d"> Route of administration (Oral/IV) </string>
    <string name="pofpa151da"> وات ذريعي </string>
    <string name="pofpa151db"> رڳ ذريعي </string>
    <string name="pofpa152"> آڪسيجن ٿيراپي </string>
    <string name="pofpa1597"> لاڳو نه ٿو ٿئ </string>
    <string name="ed_sentence">QWERTYUIOPASDFGHJKLZXCVBNM qwertyuiopasdfghjklzxcvbnm,.?-#()1234567890</string>
</resources>