<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.rsvstudy.ui.form1.Section02Activity" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">

        <LinearLayout
            android:id="@+id/ll02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Section2" />


            <!--RS17 - Radio-->
            <android.support.v7.widget.CardView
                android:id="@+id/RS17cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/RS17" />

                    <RadioGroup
                        android:id="@+id/RS17"
                        android:orientation="horizontal"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/RS17a"
                            style="@style/radiobutton"
                            android:layout_weight="1"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/RS17b"
                            style="@style/radiobutton"
                            android:layout_weight="1"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--RS18 - Radio-->
            <android.support.v7.widget.CardView
                android:id="@+id/RS18cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/RS18" />

                    <RadioGroup
                        android:id="@+id/RS18"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/RS18a"
                            style="@style/radiobutton"
                            android:text="@string/RS18a" />

                        <RadioButton
                            android:id="@+id/RS18b"
                            style="@style/radiobutton"
                            android:text="@string/RS18b" />

                        <RadioButton
                            android:id="@+id/RS18c"
                            style="@style/radiobutton"
                            android:text="@string/RS18c" />

                        <RadioButton
                            android:id="@+id/RS18d"
                            style="@style/radiobutton"
                            android:text="@string/RS18d" />

                        <RadioButton
                            android:id="@+id/RS18e"
                            style="@style/radiobutton"
                            android:text="@string/RS18e" />

                        <RadioButton
                            android:id="@+id/RS18f"
                            style="@style/radiobutton"
                            android:text="@string/RS18f" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--RS19 - Radio-->
            <android.support.v7.widget.CardView
                android:id="@+id/RS19cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/RS19" />

                    <RadioGroup
                        android:id="@+id/RS19"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/RS19a"
                            style="@style/radiobutton"
                            android:text="@string/RS19a" />

                        <RadioButton
                            android:id="@+id/RS19b"
                            style="@style/radiobutton"
                            android:text="@string/RS19b" />

                        <RadioButton
                            android:id="@+id/RS19c"
                            style="@style/radiobutton"
                            android:text="@string/RS19c" />

                        <RadioButton
                            android:id="@+id/RS19d"
                            style="@style/radiobutton"
                            android:text="@string/RS19d" />

                        <RadioButton
                            android:id="@+id/RS19e"
                            style="@style/radiobutton"
                            android:text="@string/RS19e" />

                        <RadioButton
                            android:id="@+id/RS19f"
                            style="@style/radiobutton"
                            android:text="@string/RS19f" />

                        <RadioButton
                            android:id="@+id/RS19g"
                            style="@style/radiobutton"
                            android:text="@string/RS19g" />

                        <RadioButton
                            android:id="@+id/RS19h"
                            style="@style/radiobutton"
                            android:text="@string/RS19h" />

                        <RadioButton
                            android:id="@+id/RS1996"
                            style="@style/radiobutton"
                            android:text="@string/RS1996" />

                        <EditText
                            android:id="@+id/RS1996x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/ed_sentence"
                            android:inputType="textShortMessage"
                            android:hint="@string/specify"
                            android:tag="pocfc0296"
                            android:text='@{RS1996.checked? RS1996x.getText().toString() : "" }'
                            android:visibility='@{RS1996.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--RS20 - Radio-->
            <android.support.v7.widget.CardView
                android:id="@+id/RS20cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/RS20" />

                    <RadioGroup
                        android:id="@+id/RS20"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/RS20a"
                            style="@style/radiobutton"
                            android:text="@string/RS20a" />

                        <RadioButton
                            android:id="@+id/RS20b"
                            style="@style/radiobutton"
                            android:text="@string/RS20b" />

                        <RadioButton
                            android:id="@+id/RS20c"
                            style="@style/radiobutton"
                            android:text="@string/RS20c" />

                        <RadioButton
                            android:id="@+id/RS20d"
                            style="@style/radiobutton"
                            android:text="@string/RS20d" />

                        <RadioButton
                            android:id="@+id/RS2096"
                            style="@style/radiobutton"
                            android:text="@string/RS2096" />

                        <EditText
                            android:id="@+id/RS2096x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="@string/ed_sentence"
                            android:inputType="textShortMessage"
                            android:hint="@string/specify"
                            android:tag="pocfc0296"
                            android:text='@{RS2096.checked? RS2096x.getText().toString() : "" }'
                            android:visibility='@{RS2096.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--RS21 - Radio-->
            <android.support.v7.widget.CardView
                android:id="@+id/RS21cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/RS21" />

                    <RadioGroup
                        android:id="@+id/RS21"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/RS21a"
                            style="@style/radiobutton"
                            android:layout_weight="1"
                            android:text="@string/RS21a" />

                        <RadioButton
                            android:id="@+id/RS21b"
                            style="@style/radiobutton"
                            android:layout_weight="1"
                            android:text="@string/RS21b" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--RS22 - Date Picker-->
            <android.support.v7.widget.CardView
                android:id="@+id/RS22cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/RS22" />

                    <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                        android:id="@+id/RS22"
                        style="@style/textInput"
                        android:layout_marginStart="20dp"
                        android:layout_weight="70"
                        android:focusable="false"
                        android:hint="DD/MM/YYYY"
                        android:textColor="@android:color/black"
                        app:dateFormat="dd-MM-yyyy"
                        app:maxDate="CR_DATE" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="32dp">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEnd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>
